Some little fixes

--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
 	<!-- Bootstrap CSS -->
 	<link href="//netdna.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css" rel="stylesheet">
 
+	<link href="assets/css/style.min.css" rel="stylesheet">
+
 	<!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
 	<!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
 	<!--[if lt IE 9]>
@@ -21,10 +23,9 @@
 
 	<!-- Bootstrap JavaScript -->
 	<script src="//netdna.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
-	
 </head>
-<body style="padding-top: 50px; background:#222;">
-	<nav class="navbar navbar-inverse navbar-fixed-top" style="border:none;">
+<body class="jumbotron">
+	<nav class="navbar navbar-inverse navbar-fixed-top">
 	  <div class="container">
 	    <div class="navbar-header" style="border:none;">
 	      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
@@ -33,14 +34,13 @@
 	        <span class="icon-bar"></span>
 	        <span class="icon-bar"></span>
 	      </button>
-	      <a class="navbar-brand" href="#" style="background:#EEEEEE;color:#000;">Neuron vs. Logic</a>
+	      <a class="navbar-brand" href="#" class="text-white">Neuron vs. Logic</a>
 	    </div>
 	    <div id="navbar" class="collapse navbar-collapse">
 	      <ul class="nav navbar-nav">
-	        <li class="active"><a href="./">Home</a></li>
-	        <li><a href="./or/">OR</a></li>
-	        <li><a href="./nand/">NAND</a></li>
-	        <li><a href="./xor/">XOR</a></li>
+	        <li><a href="./or.html">OR</a></li>
+	        <li><a href="./nand.html">NAND</a></li>
+	        <li><a href="./xor.html">XOR</a></li>
 	      </ul>
 	    </div><!--/.nav-collapse -->
 	  </div>
@@ -57,9 +57,9 @@
 				<p class="btn-success" style="margin-bottom: 0;">Pokud se vám podaří váhy správně nastavit, váš výstup se rozsvítí zeleně! :-)</p>
 				<p class="btn-danger">Do té doby však bude váš výstup červený! :-(</p>
 				<p>
-					<a class="btn btn-primary btn-lg" href="./or/" role="button">OR</a>
-					<a class="btn btn-primary btn-lg" href="./nand/" role="button">NAND</a>
-					<a class="btn btn-primary btn-lg" href="./xor/" role="button">XOR</a>
+					<a class="btn btn-primary btn-lg" href="./or.html" role="button">OR</a>
+					<a class="btn btn-primary btn-lg" href="./nand.html" role="button">NAND</a>
+					<a class="btn btn-primary btn-lg" href="./xor.html" role="button">XOR</a>
 				</p>
 				
 			</div>
