--- a/xor.html
+++ b/xor.html
@@ -8,7 +8,7 @@
 
 	<!-- Bootstrap CSS -->
 	<link href="//netdna.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css" rel="stylesheet">
-
+	<link href="assets/css/style.min.css" rel="stylesheet">
 	<!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
 	<!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
 	<!--[if lt IE 9]>
@@ -20,10 +20,10 @@
 	<script src="//code.jquery.com/jquery.js"></script>
 	<!-- Bootstrap JavaScript -->
 	<script src="//netdna.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
-	<script src="js/recountNAND.js"></script>
+	<script src="assets/js/recountXOR.js" async defer></script>
 </head>
-<body style="padding-top: 50px; background:#EEEEEE;">
-	<nav class="navbar navbar-inverse navbar-fixed-top" style="border:none;">
+<body class="jumbotron">
+	<nav class="navbar navbar-inverse navbar-fixed-top">
 	  <div class="container">
 	    <div class="navbar-header" style="border:none;">
 	      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
@@ -32,13 +32,13 @@
 	        <span class="icon-bar"></span>
 	        <span class="icon-bar"></span>
 	      </button>
-	      <a class="navbar-brand" href="../" style="background:#EEEEEE;color:#000;">Neuron vs. Logic</a>
+	      <a class="navbar-brand" href="./">Neuron vs. Logic</a>
 	    </div>
 	    <div id="navbar" class="collapse navbar-collapse">
 	      <ul class="nav navbar-nav">
-	        <li><a href="../or/">OR</a></li>
-	        <li class="active"><a href="../nand/">NAND</a></li>
-	        <li><a href="../xor/">XOR</a></li>
+	        <li><a href="./or.html">OR</a></li>
+	        <li><a href="./nand.html">NAND</a></li>
+	        <li class="active"><a href="./xor.html">XOR</a></li>
 	      </ul>
 	    </div><!--/.nav-collapse -->
 	  </div>
@@ -46,7 +46,7 @@
 
     <div class="container">
 		<div class="row">
-			<h3 class="text-center">Neuron vs. <strong>NAND</strong></h3>
+			<h3 class="text-center">Neuron vs. <strong>XOR</strong></h3>
 			<div class="col-md-6 col-md-offset-3">
 				<table class="table table-bordered" style="margin-bottom: 0">
 					<thead>
@@ -74,7 +74,7 @@
 				<table class="table table-bordered" width="50%" style="background: #fff;">
 					<thead class="thead-inverse">
 						<tr>
-							<th class="text-center alert-success" colspan="5">NAND</th>
+							<th class="text-center alert-success" colspan="5">XOR</th>
 						</tr>
 					</thead>
 					<tbody class="recountContainer">
@@ -83,25 +83,25 @@
 							<td class="text-center col-md-2"><strong>B</strong></td>
 							<td class="text-center col-md-2"><strong>v</strong></td>
 							<td class="text-center col-md-2 btn-danger" data-name="Y"><strong>Y</strong></td>
-							<td class="text-center col-md-2 btn-success"><strong>Y<sub>NAND</sub></strong></td>
+							<td class="text-center col-md-2 btn-success"><strong>Y<sub>XOR</sub></strong></td>
 						</tr>
 						<tr>
 							<td class="text-center"><span data-name="a1">0</span></td>
 							<td class="text-center"><span data-name="b1">0</span></td>
 							<td class="text-center"><span data-name="v1">0.0</span></td>
-							<td class="text-center btn-danger"><span data-name="y1">0</span></td>
-							<td class="text-center btn-success"><span data-name="y1or">1</span></td>
+							<td class="text-center btn-danger"><span data-name="y1">1</span></td>
+							<td class="text-center btn-success"><span data-name="y1or">0</span></td>
 						</tr>
 						<tr>
-							<td class="text-center"><span data-name="a2">1</span></td>
-							<td class="text-center"><span data-name="b2">0</span></td>
+							<td class="text-center"><span data-name="a2">0</span></td>
+							<td class="text-center"><span data-name="b2">1</span></td>
 							<td class="text-center"><span data-name="v2">0.0</span></td>
 							<td class="text-center btn-danger"><span data-name="y2">0</span></td>
 							<td class="text-center btn-success"><span data-name="y2or">1</span></td>
 						</tr>
 						<tr>
-							<td class="text-center"><span data-name="a3">0</span></td>
-							<td class="text-center"><span data-name="b3">1</span></td>
+							<td class="text-center"><span data-name="a3">1</span></td>
+							<td class="text-center"><span data-name="b3">0</span></td>
 							<td class="text-center"><span data-name="v3">0.0</span></td>
 							<td class="text-center btn-danger"><span data-name="y3">0</span></td>
 							<td class="text-center btn-success"><span data-name="y3or">1</span></td>
