FIXED brand color

--- a/index.html
+++ b/index.html
@@ -24,17 +24,17 @@
 	<!-- Bootstrap JavaScript -->
 	<script src="//netdna.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
 </head>
-<body class="jumbotron">
+<body class="jumbotron aaa">
 	<nav class="navbar navbar-inverse navbar-fixed-top">
 	  <div class="container">
-	    <div class="navbar-header" style="border:none;">
+	    <div class="navbar-header">
 	      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
 	        <span class="sr-only">Toggle navigation</span>
 	        <span class="icon-bar"></span>
 	        <span class="icon-bar"></span>
 	        <span class="icon-bar"></span>
 	      </button>
-	      <a class="navbar-brand" href="#" class="text-white">Neuron vs. Logic</a>
+	      <a class="navbar-brand text-white" href="#">Neuron vs. Logic</a>
 	    </div>
 	    <div id="navbar" class="collapse navbar-collapse">
 	      <ul class="nav navbar-nav">
